<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/osnova"
    app:layout_insetEdge="left"
    tools:context=".MainActivitydistant">


    <TextView
        android:id="@+id/tw_provider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/provider"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/textviewborder"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/label_coord"
            android:layout_width="233dp"
            android:layout_height="62dp"
            android:text="@string/label_coord"
            android:textColor="#000000"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/tw_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tw_long"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tw_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tw_lat"
            android:textColor="#000000"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/textviewborder"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/label_altitude"
            android:layout_width="158dp"
            android:layout_height="71dp"
            android:text="@string/label_altitude"
            android:textColor="#000000"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/tw_alt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tw_alt"
            android:textColor="#000000"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/textviewborder"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_provider">

        <TextView
            android:id="@+id/label_speed"
            android:layout_width="175dp"
            android:layout_height="46dp"
            android:text="@string/label_speed"
            android:textColor="#000000"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/tw_acc"
            android:layout_width="104dp"
            android:layout_height="30dp"
            android:text="@string/tw_acc"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/type_move"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:textColor="#000000"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_home_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_baseline_home_24"
            android:insetBottom="0dp"
            android:onClick="onclickhom"

            android:text="@string/bt_home_d" />


        <Button
            android:id="@+id/bt_maps_d"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:drawableLeft="@android:drawable/ic_dialog_map"
            android:insetBottom="0dp"
            android:onClick="onclickmap"
            android:text="@string/bt_maps_d" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tw_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColorHint="#000000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/tw_progress_bar"
        android:layout_width="222dp"
        android:layout_height="21dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:hint="Нажми чтобы ввести расстояние"
        android:onClick="OnClickprogressbar"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tw_proideno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/tw_proideno"
        android:textColor="#000000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tw_total"
        app:layout_constraintEnd_toStartOf="@+id/tw_total"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tw_total"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>