<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:onClick="onclickdistmaps"
    android:orientation="vertical">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        tools:context=".MapsActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnStartService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onclickShowPopularPlaces"
            android:text="@string/show_popular_places" />

        <Button
            android:id="@+id/start_save_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_save_line" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/osnova">

            <Button
                android:id="@+id/bt_home_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_baseline_home_24"
                android:insetBottom="0dp"
                android:onClick="onclickhom"

                android:text="@string/bt_home_d" />

            <Button
                android:id="@+id/bt_distant_m"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_baseline_directions_run_24"
                android:insetBottom="0dp"
                android:onClick="onclickhomemaps"
                android:text="@string/bt_distant" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

