<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/osnova"
    tools:context=".Save_road_maps">

    <!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/lv_log_latlong"-->
<!--        android:layout_width="362dp"-->
<!--        android:layout_height="604dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--    </androidx.recyclerview.widget.RecyclerView>-->

    <ListView
        android:id="@+id/lv_log_latlong"
        android:layout_width="410dp"
        android:layout_height="568dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="1.0"></ListView>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onclicksave"
            android:text="@string/btn_save" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onclickclear"
            android:text="@string/btn_clear" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="410dp"
        android:layout_height="73dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="startTrack"
            android:text="Начать отслеживать" />

        <Button
            android:id="@+id/bt_distant_m"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_baseline_directions_run_24"
            android:insetBottom="0dp"
            android:onClick="onclickhomemaps"
            android:text="@string/bt_distant" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/osnova"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_home_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_baseline_home_24"
            android:insetBottom="0dp"
            android:onClick="onclickhom"

            android:text="@string/bt_home_d" />


        <Button
            android:id="@+id/bt_maps_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:drawableLeft="@android:drawable/ic_dialog_map"
            android:insetBottom="0dp"
            android:onClick="onclickmap"
            android:text="@string/bt_maps_d" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>