<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/osnova"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/bt_maps_d"
        android:layout_width="270dp"
        android:layout_height="65dp"
        android:layout_marginBottom="60dp"
        android:layout_weight="1"
        android:background="@drawable/inset"
        android:drawableLeft="@android:drawable/ic_dialog_map"
        android:elevation="6dp"
        android:insetBottom="0dp"
        android:onClick="onclickMaps"
        android:stateListAnimator="@null"
        android:text="@string/bt_maps"
        android:translationZ="4dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_distant_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <Button
        android:id="@+id/bt_distant_m"
        android:layout_width="270dp"
        android:layout_height="65dp"
        android:layout_marginBottom="60dp"
        android:layout_weight="1"
        android:background="@drawable/inset"
        android:drawableLeft="@drawable/ic_baseline_directions_run_24"
        android:elevation="6dp"
        android:insetBottom="0dp"
        android:onClick="onclickdistant"
        android:stateListAnimator="@null"
        android:text="@string/bt_distant"
        android:translationZ="4dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bt_home_m"
        android:layout_width="270dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:background="@drawable/inset"
        android:drawableLeft="@drawable/ic_baseline_show_chart_24"
        android:elevation="6dp"
        android:insetBottom="0dp"
        android:onClick="onclickHome"
        android:stateListAnimator="@null"
        android:text="статистика"
        android:textSize="14sp"
        android:translationZ="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />

    <Button
        android:id="@+id/button"
        android:layout_width="270dp"
        android:layout_height="65dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/inset"
        android:drawableLeft="@drawable/ic_baseline_save_24"
        android:elevation="6dp"
        android:onClick="omclicksavecoord"
        android:stateListAnimator="@null"
        android:text="@string/saveLatLong"
        android:translationZ="4dp"
        app:layout_constraintBottom_toTopOf="@id/bt_home_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>